--- a/force-app/main/default/lwc/p2CAndApiDecoratorParent/p2CAndApiDecoratorParent.html
+++ b/force-app/main/default/lwc/p2CAndApiDecoratorParent/p2CAndApiDecoratorParent.html
@@ -1,5 +1,5 @@
 <template>
     <lightning-card title="Parent Component">
-        <c-p2-c-and-api-decorator></c-p2-c-and-api-decorator>
+        <c-p2-c-and-api-decorator my-title="Lakshay"></c-p2-c-and-api-decorator>
     </lightning-card>
 </template>
