--- a/force-app/main/default/lwc/p2CAndApiDecoratorParent/p2CAndApiDecoratorParent.html
+++ b/force-app/main/default/lwc/p2CAndApiDecoratorParent/p2CAndApiDecoratorParent.html
@@ -1,5 +1,6 @@
 <template>
-    <lightning-card title="Parent Component">
-        <c-p2-c-and-api-decorator my-title="Lakshay"></c-p2-c-and-api-decorator>
-    </lightning-card>
+   <lightning-card title="Parent Component">
+    <c-p2-c-and-api-decorator my-title="Lakshay"></c-p2-c-and-api-decorator>
+   </lightning-card>
+   <lightning-button label="Click Me!!!" variant="brand" onclick={handleValueChange}></lightning-button>
 </template>
