--- a/force-app/main/default/lwc/parentLwcOne/parentLwcOne.html
+++ b/force-app/main/default/lwc/parentLwcOne/parentLwcOne.html
@@ -7,6 +7,7 @@
             placeholder="Please enter the value"
             onchange={handleChange}>
         </lightning-input>
+        <lightning-button label="Add 10 to Counter" onclick={handleclick}></lightning-button>
         </div>
         <c-child-lwc-one counter-value={value}></c-child-lwc-one>
     </lightning-card>
